Intent for web search  --> ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="usuari">Usuari</string>
     <string name="password">Contrasenya</string>
     <string name="enter">ENTRA</string>
+    <string name="subtext">Selecciona una de las siguientes opciones, por favor :</string>
+    <string name="search">Buscar</string>
+    <string name="phone">Llamar</string>
+    <string name="share">Compartir</string>
+    <string name="send">Enviar</string>
+
 </resources>
