Add gif in the third activity --> ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="password">Contrasenya</string>
     <string name="enter">ENTRA</string>
     <string name="out">SALIR</string>
+    <string name="back">REGRESAR</string>
     <string name="subtext">Selecciona una de las siguientes opciones, por favor :</string>
     <string name="search">Buscar</string>
     <string name="phone">Llamar</string>
@@ -14,5 +15,7 @@
     <string name="buscar">Buscar en la Web</string>
     <string name="sharing">Enviar y Compartir</string>
     <string name="another">Enviar a otra Activity</string>
+    <string name="third">Welcome to the IOC-noFrog</string>
+    <string name="ending">Come back soon!!</string>
 
 </resources>
